v0.0.1/modules/schema/pages/class/PowerSystemProjectLifecycleToBeDeleted.adoc
= `PowerSystemProjectLifecycleToBeDeleted`
:toclevels: 4


+++Represent the base lifecycle of a functional model change that could be a construction of new elements.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PowerSystemProjectLifecycleToBeDeleted`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* *`PowerSystemProjectLifecycleToBeDeleted`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<cancelled,`cancelled`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The date the Power System Project is in cancelled stage.+++

| <<committed,`committed`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The date Power System Project is in committed stage.+++

| <<inBuild,`inBuild`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The date Power System Project is in build stage.+++

| <<inPlan,`inPlan`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The date Power System Project is in planning stage.+++
|===

'''


//[discrete]
[#cancelled]
=== `cancelled`
+++The date the Power System Project is in cancelled stage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemProjectLifecycleToBeDeleted.cancelled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#committed]
=== `committed`
+++The date Power System Project is in committed stage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemProjectLifecycleToBeDeleted.committed`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#inBuild]
=== `inBuild`
+++The date Power System Project is in build stage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemProjectLifecycleToBeDeleted.inBuild`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#inPlan]
=== `inPlan`
+++The date Power System Project is in planning stage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemProjectLifecycleToBeDeleted.inPlan`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===


